[package]
name = "micron"
version = "0.1.0"
authors = ["Johann Woelper <woelper@gmail.com>"]
edition = "2021"
rust-version = "1.70"


[dependencies]
egui = "0.22"
egui_tiles = {version = "0.1", optional = true}
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"


# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
positioned-io = "0.3.1"
anyhow = "1.0.71"
rfd = "0.11.4"
# syntect = { version = "5", default-features = false, features = [
#     "default-fancy",
# ] }
syntect = { version = "5"}
enum-map = { version = "2", features = ["serde"] }

env_logger = "0.10"




[profile.release]


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
